--- a/Lab3.ipynb
+++ b/Lab3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment 3: Jacobi, Gauss-Seidel, Relaxation"
+    "# Numerical Methods: Jacobi, Gauss-Seidel, Relaxation"
    ]
   },
   {
@@ -385,13 +385,6 @@
     "error = np.dot(A, x) - b\n",
     "print(\"Error: {0}\".format(error))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
