--- a/Lab3.ipynb
+++ b/Lab3.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -76,62 +76,10 @@
       "Iteration 39: [2.00015148 4.00014197 6.00012047]\n",
       "Iteration 40: [2.00012047 3.9999845  5.99994634]\n",
       "Iteration 41: [1.99994634 3.99991293 5.99991452]\n",
-      "Iteration 42: [1.99991452 3.99998409 6.00000675]\n",
-      "Iteration 43: [2.00000675 4.00004612 6.00005169]\n",
-      "Iteration 44: [2.00005169 4.00002247 6.00001087]\n",
-      "Iteration 45: [2.00001087 3.99997959 5.99997303]\n",
-      "Iteration 46: [1.99997303 3.99998108 5.99998595]\n",
-      "Iteration 47: [1.99998595 4.00000646 6.00001167]\n",
-      "Iteration 48: [2.00001167 4.00001286 6.00001152]\n",
-      "Iteration 49: [2.00001152 3.99999992 5.99999651]\n",
-      "Iteration 50: [1.99999651 3.99999249 5.99999229]\n",
-      "Iteration 51: [1.99999229 3.99999789 5.99999983]\n",
-      "Iteration 52: [1.99999983 4.00000377 6.00000444]\n",
-      "Iteration 53: [2.00000444 4.0000023  6.00000137]\n",
-      "Iteration 54: [2.00000137 3.99999847 5.99999781]\n",
-      "Iteration 55: [1.99999781 3.99999822 5.99999858]\n",
-      "Iteration 56: [1.99999858 4.00000038 6.00000087]\n",
-      "Iteration 57: [2.00000087 4.00000115 6.00000108]\n",
-      "Iteration 58: [2.00000108 4.00000011 5.9999998 ]\n",
-      "Iteration 59: [1.9999998  3.99999936 5.99999932]\n",
-      "Iteration 60: [1.99999932 3.99999976 5.99999992]\n",
-      "Iteration 61: [1.99999992 4.0000003  6.00000037]\n",
-      "Iteration 62: [2.00000037 4.00000023 6.00000015]\n",
-      "Iteration 63: [2.00000015 3.99999989 5.99999983]\n",
-      "Iteration 64: [1.99999983 3.99999984 5.99999986]\n",
-      "Iteration 65: [1.99999986 4.00000002 6.00000006]\n",
-      "Iteration 66: [2.00000006 4.0000001  6.0000001 ]\n",
-      "Iteration 67: [2.0000001  4.00000002 5.99999999]\n",
-      "Iteration 68: [1.99999999 3.99999995 5.99999994]\n",
-      "Iteration 69: [1.99999994 3.99999997 5.99999999]\n",
-      "Iteration 70: [1.99999999 4.00000002 6.00000003]\n",
-      "Iteration 71: [2.00000003 4.00000002 6.00000002]\n",
-      "Iteration 72: [2.00000002 3.99999999 5.99999999]\n",
-      "Iteration 73: [1.99999999 3.99999999 5.99999999]\n",
-      "Iteration 74: [1.99999999 4.         6.        ]\n",
-      "Iteration 75: [2.         4.00000001 6.00000001]\n",
-      "Iteration 76: [2.00000001 4.         6.        ]\n",
-      "Iteration 77: [2.         4.         5.99999999]\n",
-      "Iteration 78: [1.99999999 4.         6.        ]\n",
-      "Iteration 79: [2. 4. 6.]\n",
-      "Iteration 80: [2. 4. 6.]\n",
-      "Iteration 81: [2. 4. 6.]\n",
-      "Iteration 82: [2. 4. 6.]\n",
-      "Iteration 83: [2. 4. 6.]\n",
-      "Iteration 84: [2. 4. 6.]\n",
-      "Iteration 85: [2. 4. 6.]\n",
-      "Iteration 86: [2. 4. 6.]\n",
-      "Iteration 87: [2. 4. 6.]\n",
-      "Iteration 88: [2. 4. 6.]\n",
-      "Iteration 89: [2. 4. 6.]\n",
-      "Iteration 90: [2. 4. 6.]\n",
-      "Iteration 91: [2. 4. 6.]\n",
-      "Iteration 92: [2. 4. 6.]\n",
-      "Iteration 93: [2. 4. 6.]\n",
       "Solution:\n",
-      "[2. 4. 6.]\n",
+      "[1.99994634 3.99991293 5.99991452]\n",
       "Error:\n",
-      "[-6.09539086e-11  6.06474870e-11  1.59957381e-10]\n"
+      "[ 3.18217134e-05 -1.42315492e-04 -2.76708478e-04]\n"
      ]
     }
    ],
@@ -188,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -228,30 +176,8 @@
       "Iteration 27: [2.00023761 4.         5.99984159]\n",
       "Iteration 28: [1.99984159 4.         6.00010561]\n",
       "Iteration 29: [2.00010561 4.         5.9999296 ]\n",
-      "Iteration 30: [1.9999296  4.         6.00004694]\n",
-      "Iteration 31: [2.00004694 4.         5.99996871]\n",
-      "Iteration 32: [1.99996871 4.         6.00002086]\n",
-      "Iteration 33: [2.00002086 4.         5.99998609]\n",
-      "Iteration 34: [1.99998609 4.         6.00000927]\n",
-      "Iteration 35: [2.00000927 4.         5.99999382]\n",
-      "Iteration 36: [1.99999382 4.         6.00000412]\n",
-      "Iteration 37: [2.00000412 4.         5.99999725]\n",
-      "Iteration 38: [1.99999725 4.         6.00000183]\n",
-      "Iteration 39: [2.00000183 4.         5.99999878]\n",
-      "Iteration 40: [1.99999878 4.         6.00000081]\n",
-      "Iteration 41: [2.00000081 4.         5.99999946]\n",
-      "Iteration 42: [1.99999946 4.         6.00000036]\n",
-      "Iteration 43: [2.00000036 4.         5.99999976]\n",
-      "Iteration 44: [1.99999976 4.         6.00000016]\n",
-      "Iteration 45: [2.00000016 4.         5.99999989]\n",
-      "Iteration 46: [1.99999989 4.         6.00000007]\n",
-      "Iteration 47: [2.00000007 4.         5.99999995]\n",
-      "Iteration 48: [1.99999995 4.         6.00000003]\n",
-      "Iteration 49: [2.00000003 4.         5.99999998]\n",
-      "Iteration 50: [1.99999998 4.         6.00000001]\n",
-      "Iteration 51: [2.00000001 4.         5.99999999]\n",
-      "Solution: [2.00000001 4.         5.99999999]\n",
-      "Error: [2.35249278e-08 2.35249269e-08 0.00000000e+00]\n"
+      "Solution: [2.00010561 4.         5.9999296 ]\n",
+      "Error: [0.00017601 0.00017601 0.        ]\n"
      ]
     }
    ],
@@ -304,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -333,20 +259,8 @@
       "Iteration 16: [1.99911377 3.99994859 6.00034578]\n",
       "Iteration 17: [1.99972978 4.0001283  6.00028435]\n",
       "Iteration 18: [2.00000706 4.00013347 6.00016207]\n",
-      "Iteration 19: [2.00008456 4.00008611 6.0000672 ]\n",
-      "Iteration 20: [2.00007588 4.00004088 6.00001512]\n",
-      "Iteration 21: [2.0000455  4.00001285 5.99999453]\n",
-      "Iteration 22: [2.00002002 4.00000005 5.9999906 ]\n",
-      "Iteration 23: [2.00000531 3.99999635 5.99999292]\n",
-      "Iteration 24: [1.99999912 3.99999663 5.99999619]\n",
-      "Iteration 25: [1.99999766 3.99999795 5.99999854]\n",
-      "Iteration 26: [1.9999981  3.99999908 5.99999975]\n",
-      "Iteration 27: [1.99999892 3.99999975 6.00000019]\n",
-      "Iteration 28: [1.99999956 4.00000003 6.00000025]\n",
-      "Iteration 29: [1.9999999  4.0000001  6.00000017]\n",
-      "Iteration 30: [2.00000004 4.00000009 6.00000009]\n",
-      "Solution: [2.00000004 4.00000009 6.00000009]\n",
-      "Error: [-4.96459691e-08  1.20948416e-07  2.56858780e-07]\n"
+      "Solution: [2.00000706 4.00013347 6.00016207]\n",
+      "Error: [-0.000155    0.00011194  0.00036685]\n"
      ]
     }
    ],
@@ -385,6 +299,13 @@
     "error = np.dot(A, x) - b\n",
     "print(\"Error: {0}\".format(error))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
